auth updates
